# Imageneer

./: .gitignore  CMakeLists.txt  README.md
ComputerVision/: CMakeLists.txt
ComputerVision/include/: ComputerVisionFunc.h
ComputerVision/src/: ComputerVisionFunc.cpp
ImageRecognition/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  app.cpp  cmake_install.cmake
ImageRecognition/ImageRecognition/: Makefile  cmake_install.cmake
ImageRecognition/include/: ImGuiController.h  UIController.h
ImageRecognition/src/: ImGuiController.cpp  UIController.cpp
ImageneerClient/: CMakeLists.txt  app.cpp
ImageneerClient/include/: ImageneerData.h  ImageneerViewController.h  UIController.h
ImageneerClient/src/: ImageneerViewController.cpp  UIController.cpp  app.cpp
ImageneerUtils/: CMakeLists.txt
ImageneerUtils/include/: ImageneerData.h
ImageneerUtils/src/: ImageneerData.cpp
dependencies/glad/: glad.c  glad.h
dependencies/nativefiledialog/lib/Debug/x64/: nfd_d.lib
dependencies/nativefiledialog/lib/Debug/x86/: nfd_d.idb  nfd_d.lib
dependencies/nativefiledialog/lib/Release/x64/: nfd.lib
dependencies/nativefiledialog/lib/Release/x86/: nfd.lib
